k8s/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  ports:
    - port: 7878
      targetPort: http
      name: http
  selector:
    app: radarr
